--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
-tensorflow
-opencv-python
-keras==2.2.4
-numpy==1.15.4
-pandas
-scikit-learn
-Click==7.0
-Flask==1.0.2
-Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.3.2
-numpy==1.15.4
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.6
+
+click==6.7
+Flask==0.12
+Cython==0.25.2
+funcsigs==1.0.2
+h5py==2.6.0
+itsdangerous==0.24
+Jinja2==2.9.4
+Keras==1.2.1
+MarkupSafe==0.23
+mock==2.0.0
+numpy==1.12.0
+olefile==0.44
+pbr==1.10.0
+Pillow==4.0.0
+protobuf==3.1.0.post1
+PyYAML==3.12
+scipy==0.18.1
+six==1.10.0
+tensorflow==0.12.1
+Theano==0.8.2
+Werkzeug==0.11.15
+gunicorn==19.6.0
 
 
