--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
+ 
+Flask==1.0.2
+gunicorn==19.9.0
+h5py==2.8.0
+Jinja2==2.10.1
+Keras==2.1.5
+numpy==1.14.2
+opencv-python==3.4.0.12
+pandas==0.22.0
+Pillow==5.1.0
+requests==2.19.1
+scipy==1.0.1
+tensorboard==1.7.0
+tensorflow==1.12.1
+tqdm==4.26.0
+urllib3==1.24.2
+utils==0.9.0
 scikit-learn
-click==6.7
-Flask==0.12
-Cython==0.25.2
-funcsigs==1.0.2
-h5py==2.6.0
-itsdangerous==0.24
-Jinja2==2.9.4
-Keras
-MarkupSafe==0.23
-mock==2.0.0
-numpy==1.12.0
-olefile==0.44
-pbr==1.10.0
-Pillow==4.0.0
-protobuf==3.1.0.post1
-PyYAML==3.12
-scipy==0.18.1
-six==1.10.0
-tensorflow
-Theano==0.8.2
-Werkzeug==0.11.15
-gunicorn==19.6.0
-
