--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
-tf.keras.preprocessing.image
+keras
 numpy==1.18.0
 protobuf==3.11.2
 scikit-learn==0.22
