--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==0.9.0
 astor==0.8.1
 certifi==2019.11.28
 Click==7.0
-keras
+Keras-backend
 Flask==1.1.1
 Flask-WTF==0.14.2
 gast==0.3.2
@@ -27,3 +27,5 @@ tf-estimator-nightly==1.14.0.dev2019030115
 Werkzeug==0.16.0
 wincertstore==0.2
 WTForms==2.2.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
